@@ -3,6 +3,7 @@ package org.synyx.urlaubsverwaltung.department.api;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -12,11 +13,11 @@ import org.synyx.urlaubsverwaltung.department.DepartmentService;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
+import static org.springframework.http.HttpStatus.OK;
 import static org.synyx.urlaubsverwaltung.security.SecurityRules.IS_OFFICE;
 
 @RestControllerAdviceMarker
-@Tag(name = "departments", description = "Departments: Get information about the departments of the application")
+@Tag(name = "departments", description = "Departments: Returns information about the departments")
 @RestController
 @RequestMapping("/api")
 public class DepartmentApiController {
@@ -28,16 +29,16 @@ public class DepartmentApiController {
         this.departmentService = departmentService;
     }
 
-    @Operation(summary = "Get all departments of the application", description = "Get all departments of the application")
+    @Operation(summary = "Returns all departments", description = "Returns all departments. Office permission is needed.")
     @GetMapping("/departments")
     @PreAuthorize(IS_OFFICE)
-    public DepartmentsDto departments() {
+    public ResponseEntity<DepartmentsDto> departments() {
 
         final List<DepartmentDto> departments = departmentService.getAllDepartments()
             .stream()
             .map(DepartmentDto::new)
-            .collect(toList());
+            .toList();
 
-        return new DepartmentsDto(departments);
+        return new ResponseEntity<>(new DepartmentsDto(departments), OK);
     }
 }
